# emscripten-cmake-dynamic-libraries

./: CMakeLists.txt  README.md
A/: CMakeLists.txt
A/src/: a.cpp  a.h
B/: CMakeLists.txt
B/src/: b.cpp  b.h
Main/: CMakeLists.txt
Main/src/: main.cpp
